--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
                 <div class="container 100-vh p-0">
                     <nav class="navbar navbar-expand-lg  navbar-principal">
                         <div class="container-fluid">
-                            <a class="navbar-brand" href="./index.html"> <img class="logo-nav" src="./img/otras/the_hundred_logo_new.png" alt=""></a>
+                            <a class="navbar-brand" href="./index.html"> <img class="logo-nav"
+                                    src="./img/otras/the_hundred_logo_new.png" alt=""></a>
                             <button class="navbar-toggler bg-body-tertiary" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
                                 aria-expanded="false" aria-label="Toggle navigation">
@@ -27,27 +28,29 @@
                             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                                 <div class="navbar-nav d-flex justify-content-center">
                                     <!-- <a class="nav-link active" aria-current="page" href="#">Home</a> -->
-                                    <a class="nav-link text-nav border-3 border-white" href="./pages/carta.html">CARTA</a>
-                                    <a class="nav-link text-nav border-3 border-white" href="./pages/promociones.html">PROMOCIONES</a>
-                                    <a class="nav-link text-nav border-3 border-white" href="./pages/contacto.html">CONTACTO</a>
-                                    <a class="nav-link text-nav border-3 border-white" href="#"> </a>
+                                    <a class="nav-link text-nav border-3 border-white"
+                                        href="./pages/carta.html">CARTA</a>
+                                    <a class="nav-link text-nav border-3 border-white"
+                                        href="./pages/promociones.html">PROMOCIONES</a>
+                                    <a class="nav-link text-nav border-3 border-white"
+                                        href="./pages/contacto.html">CONTACTO</a>
                                 </div>
                             </div>
                         </div>
                     </nav>
                 </div>
+            </div>
         </nav>
         <main>
             <div class="container p-2">
                 <div class="row align-items-center p-5">
                     <div class="col-sm-12 col-md-8 col-lg-8 p-3 justify-content-center">
-                        <img src="./img/burguers/Burger_Singular_6BrtDLC.jpeg.720x720_q90.jpg"
+                        <img src="./img/burgers/Burger_Singular_6BrtDLC.jpeg.720x720_q90.jpg"
                             class=" card card-dish border-3 rounded-0 img-fluid" style="height: 30rem;"
-                            alt="Singular burguer">
+                            alt="Singular burgeer">
                     </div>
                     <div class="col-sm-12 col-md-4 col-lg-4 p-3  d-flex flex-column justify-content-center ">
                         <h2 class="card-text-home text-center"> THE HUNDRED EN CASA</h2>
-
                         <button type="button" class="btn btn-dark border-3 border-white">PIDE AHORA</button>
 
                     </div>
@@ -56,18 +59,17 @@
 
             <div class="container">
                 <div class="row  p-2">
-                    <div class="col-sm-12 col-md-6 col-lg-4 d-flex justify-content-center p-3">
+                    <a href="./pages/contacto.html"
+                        class="col-sm-12 col-md-6 col-lg-4 d-flex justify-content-center p-3">
                         <div class="card border-3 border-white rounded-0" style="width: 20rem;">
                             <img src="./img/otras/experiencia-hundred.cb8116a.jpg" style="height: 20rem;"
                                 alt="TERRAZA REST">
                             <div class="card-body">
-                                <h1 class="card-title">RESERVA TU MESA</h1>
-
-                                </p>
+                                <h1 class="card-title">CONTACTO</h1>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-sm-12 col-md-6 col-lg-4 d-flex justify-content-center p-3">
+                    </a>
+                    <a href="./pages/carta.html" class="col-sm-12 col-md-6 col-lg-4 d-flex justify-content-center p-3">
                         <div class="card border-3 border-white rounded-0" style="width: 20rem;">
                             <img src="./img/otras/pedido-home.731e1d4.jpg" class="card-img-top card-dish rounded-0"
                                 style="height: 20rem;" alt="Varias hamburguesas">
@@ -76,30 +78,22 @@
 
                             </div>
                         </div>
-                    </div>
-                    <div class="col-sm-12 col-md-6 col-lg-4 d-flex justify-content-center p-3">
+                    </a>
+                    <A href="./pages/promociones.html" class="col-sm-12 col-md-6 col-lg-4 d-flex justify-content-center p-3">
                         <div class="card border-3 border-white rounded-0" style="width: 20rem;">
                             <img src="./img/otras/burger-del-mes.jpg.720x720_q90.jpg"
                                 class="card-img-top card-dish rounded-0" style="height: 20rem;" alt="Burguer del mes">
                             <div class="card-body">
-                                <h1 class="card-title ">BURGUER DEL MES</h1>
-
+                                <h1 class="card-title ">BURGER DEL MES</h1>
                             </div>
                         </div>
-                    </div>
-
-
-
-
-
+                    </a>
+                </div>
+            </div>
         </main>
-
-
-        </div>
-    </main>
-    <footer>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
