--- a/pages/carta.html
+++ b/pages/carta.html
@@ -44,7 +44,7 @@
     <div class="container sticky-top"">
         <div class="navbar-nav nav-carta d-flex flex-row flex-wrap justify-content-around bg-body-tertiary">
             <!-- <a class="nav-link active" aria-current="page" href="#">Home</a> -->
-            <a class="nav-link" href="#">🍔Burguers</a>
+            <a class="nav-link" href="#">🍔Burgers</a>
             <a class="nav-link" href="#side">🍟Sides</a>
             <a class="nav-link" href="#kids">🧸kids</a>
             <a class="nav-link" href="#sweets">🍰Sweets</a>
@@ -57,12 +57,12 @@
         </div> -->
 
     <main>
-        <div class="container container-burguer ">
+        <div class="container">
             <div class="row  p-5">
                 <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center p-3">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
-                        <img src="../img/burguers/Burger_Singular_6BrtDLC.jpeg.720x720_q90.jpg"
-                            class="card-img-top card-dish rounded-0" style="height: 20rem;" alt="Singular burguer">
+                        <img src="../img/burgers/Burger_Singular_6BrtDLC.jpeg.720x720_q90.jpg"
+                            class="card-img-top card-dish rounded-0" style="height: 20rem;" alt="Singular burger">
                         <div class="card-body">
                             <h5 class="card-title">SINGULAR <span class="price p-2"> 11,5€</span></h5>
                             <p class="card-text">SEGUNDA MEJOR BURGER DEL MUNDO 2023.Vaca rubia gallega, cheddar, BBQ de
@@ -74,8 +74,8 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center p-3">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
-                        <img src="../img/burguers/johnnydrama.jpg.720x720_q90.jpg"
-                            class="card-img-top card-dish rounded-0" style="height: 20rem;" alt="Jhony drama burguer">
+                        <img src="../img/burgers/johnnydrama.jpg.720x720_q90.jpg"
+                            class="card-img-top card-dish rounded-0" style="height: 20rem;" alt="Jhony drama burger">
                         <div class="card-body">
                             <h5 class="card-title">JHONY DRAMA<span class="price p-2"> 10,5€</span></h5>
                             <p class="card-text">Vaca rubia gallega, cheddar, iceberg, cebolla, relish, pickles y
@@ -85,8 +85,8 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center p-3">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
-                        <img src="../img/burguers/satisfaction_2.jpg.720x720_q90.jpg"
-                            class="card-img-top card-dish rounded-0" style="height: 20rem;" alt="Satisfaction burguer">
+                        <img src="../img/burgers/satisfaction_2.jpg.720x720_q90.jpg"
+                            class="card-img-top card-dish rounded-0" style="height: 20rem;" alt="Satisfaction burger">
                         <div class="card-body">
                             <h5 class="card-title">SATISFACTION <span class="price p-2"> 12,5€</span></h5>
                             <p class="card-text">2 x 110gr vaca rubia gallega, doble cheddar, doble bacon y smokey mayo.
@@ -97,8 +97,8 @@
 
                 <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center p-3">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
-                        <img src="../img/burguers/animalstyle.jpg" class="card-img-top card-dish rounded-0"
-                            style="height: 20rem;" alt="Animal style burguer">
+                        <img src="../img/burgers/animalstyle.jpg" class="card-img-top card-dish rounded-0"
+                            style="height: 20rem;" alt="Animal style burger">
                         <div class="card-body">
                             <h5 class="card-title">ANIMAL STYLE <span class="price p-2"> 11,5€</span></h5>
                             <p class="card-text">Vaca rubia gallega, cheddar madurado, pickles, cebollita rosa encurtida
@@ -109,7 +109,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center p-3">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
-                        <img src="../img/burguers/stifler.jpg.720x720_q90.jpg" class="card-img-top card-dish rounded-0"
+                        <img src="../img/burgers/stifler.jpg.720x720_q90.jpg" class="card-img-top card-dish rounded-0"
                             style="height: 20rem;" alt="STIFLER">
                         <div class="card-body">
                             <h5 class="card-title">STIFLER <span class="price p-2"> 11,5€</span></h5>
@@ -121,8 +121,8 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center p-3">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
-                        <img src="../img/burguers/LOSER.jpg.720x720_q90.jpg" class="card-img-top card-dish rounded-0"
-                            style="height: 20rem;" alt="Loser burguer">
+                        <img src="../img/burgers/LOSER.jpg.720x720_q90.jpg" class="card-img-top card-dish rounded-0"
+                            style="height: 20rem;" alt="Loser burger">
                         <div class="card-body">
                             <h5 class="card-title">LOSER <span class="price p-2"> 9,5€</span></h5>
                             <p class="card-text">Vaca rubia gallega, cheddar, cebolla caramelizada y salsa coreana
@@ -133,7 +133,7 @@
 
                 <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center p-3">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
-                        <img src="../img/burguers/cheeseburger.jpg.720x720_q90.jpg"
+                        <img src="../img/burgers/cheeseburger.jpg.720x720_q90.jpg"
                             class="card-img-top card-dish rounded-0" style="height: 20rem;" alt="cheeseburger">
                         <div class="card-body">
                             <h5 class="card-title">CHEESEBURGUER <span class="price p-2"> 9,5€</span></h5>
@@ -144,8 +144,8 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center p-3">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
-                        <img src="../img/burguers/finch.jpg.720x720_q90.jpg" class="card-img-top card-dish rounded-0"
-                            style="height: 20rem;" alt="finch burguer">
+                        <img src="../img/burgers/finch.jpg.720x720_q90.jpg" class="card-img-top card-dish rounded-0"
+                            style="height: 20rem;" alt="finch burger">
                         <div class="card-body">
                             <h5 class="card-title">FINCH <span class="price p-2"> 14,5€</span></h5>
                             <p class="card-text">MEJOR BURGER DE ESPAÑA 2021 Chuleta de vaca rubia gallega, cheddar
@@ -156,8 +156,8 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center p-3">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
-                        <img src="../img/burguers/showton.jpg" class="card-img-top card-dish rounded-0"
-                            style="height: 20rem;" alt="Showdown burguer">
+                        <img src="../img/burgers/showton.jpg" class="card-img-top card-dish rounded-0"
+                            style="height: 20rem;" alt="Showdown burger">
                         <div class="card-body">
                             <h5 class="card-title">SHOWDOWN <span class="price p-2"> 13,5€</span></h5>
                             <p class="card-text">MEJOR BURGUER DE VALENCIA 2021 Vaca rubia gallega,cheddar,thick bacon,
@@ -218,7 +218,7 @@
                             style="height: 20rem;" alt="Menu infantil">
                         <div class="card-body">
                             <h5 class="card-title">KIDS BURGUER MENU <span class="price p-2"> 9€</span></h5>
-                            <p class="card-text">Cheeseburguer, ketchup y patatas fritas.</p>
+                            <p class="card-text">Cheeseburger, ketchup y patatas fritas.</p>
                         </div>
                     </div>
                 </div>
@@ -266,7 +266,7 @@
                 <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
                         <img src="../img/sweets/tarta_de_queso_O3OVEWd.png.720x720_q90.png"
-                            class="card-img-top card-dish rounded-0" style="height: 20rem;" alt="Satisfaction burguer">
+                            class="card-img-top card-dish rounded-0" style="height: 20rem;" alt="Satisfaction burger">
                         <div class="card-body">
                             <h5 class="card-title">CHEESCAKE NY<span class="price p-2"> 5,8€</span></h5>
                             <p class="card-text">Cheesecake clásica. </p>
