--- a/pages/promociones.html
+++ b/pages/promociones.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <div id="navbar-a">
-            <div class="container 100-vh p-0">
+            <div class="container 100-vh p-3">
                 <nav class="navbar navbar-expand-lg   d-flex justify-content-around">
                     <div class="container-fluid">
 
@@ -25,10 +25,10 @@
                         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                             <div class="navbar-nav ">
                                 <!-- <a class="nav-link active" aria-current="page" href="#">Home</a> -->
-                                <a class="nav-link text-nav border-3" href="#">CARTA</a>
-                                <a class="nav-link text-nav border-3" href="../pages/promociones.html">PROMOCIONES</a>
+                                <a class="nav-link text-nav border-3" href="../pages/carta.html">CARTA</a>
+                                <a class="nav-link text-nav border-3" href="#">PROMOCIONES</a>
                                 <a class="nav-link text-nav border-3" href="../pages/contacto.html">CONTACTO</a>
-                                <a class="nav-link text-nav border-3 border-white" href="#"> </a>
+                                <!-- <a class="nav-link text-nav border-3 border-white" href="#"> </a> -->
                             </div>
                         </div>
                     </div>
@@ -37,12 +37,12 @@
         </div>
     </nav>
     <main>
-        <div class="container container-burguer ">
+        <div class="container container-burger ">
             <div class="row  p-5">
                 <div class="col-12 col-md-6 col-lg-6 d-flex justify-content-center p-3">
                     <div class="card border-3 border-white rounded-0" style="width: 30rem;">
                         <img src="../img/otras/burger-del-mes.jpg.720x720_q90.jpg"
-                            class="card-img-top card-dish rounded-0" style="height: 30rem;" alt="Singular burguer">
+                            class="card-img-top card-dish rounded-0" style="height: 30rem;" alt="Singular burger">
                         <div class="card-body">
                             <h5 class="card-title">BURGUER DEL MES: SARA CARBONARA <span class="price p-2"> 11,5€</span></h5>
                             <p class="card-text"> Vaca rubia gallega, queso pecorino fundido, guanciale y salsa carbonara.</p>
@@ -52,7 +52,7 @@
                 <div class="col-12 col-md-6 col-lg-6 d-flex justify-content-center p-3">
                     <div class="card border-3 border-white rounded-0" style="width: 30rem;">
                         <img src="../img/otras/2x1.png"
-                            class="card-img-top card-dish rounded-0" style="height: 30rem;" alt="Singular burguer">
+                            class="card-img-top card-dish rounded-0" style="height: 30rem;" alt="Singular burger">
                         <div class="card-body">
                             <h5 class="card-title">2x1 </h5> 
                             <p class="card-text"> Todos los miercoles. Promoción válida exclusivamente para Burgers. El producto gratuito será el de menor importe.</p>
