Cambios en el nav

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Burguer Queen</title>
+    <title>THE HUNDRED</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/styles.css">
@@ -16,7 +16,7 @@
         <nav>
             <div id="navbar-a">
                 <div class="container 100-vh p-0">
-                    <nav class="navbar navbar-expand-lg  navbar-principal">
+                    <nav class="navbar navbar-expand-lg">
                         <div class="container-fluid">
                             <a class="navbar-brand" href="./index.html"> <img class="logo-nav"
                                     src="./img/otras/the_hundred_logo_new.png" alt=""></a>
@@ -28,12 +28,9 @@
                             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                                 <div class="navbar-nav d-flex justify-content-center">
                                     <!-- <a class="nav-link active" aria-current="page" href="#">Home</a> -->
-                                    <a class="nav-link text-nav border-3 border-white"
-                                        href="./pages/carta.html">CARTA</a>
-                                    <a class="nav-link text-nav border-3 border-white"
-                                        href="./pages/promociones.html">PROMOCIONES</a>
-                                    <a class="nav-link text-nav border-3 border-white"
-                                        href="./pages/contacto.html">CONTACTO</a>
+                                    <a class="nav-link text-nav px-5" href="./pages/carta.html">CARTA</a>
+                                    <a class="nav-link text-nav px-5" href="./pages/promociones.html">PROMOCIONES</a>
+                                    <a class="nav-link text-nav px-5" href="./pages/contacto.html">CONTACTO</a>
                                 </div>
                             </div>
                         </div>
@@ -42,9 +39,9 @@
             </div>
         </nav>
         <main>
-            <div class="container p-2">
-                <div class="row align-items-center p-5">
-                    <div class="col-sm-12 col-md-8 col-lg-8 p-3 justify-content-center">
+            <div class="container">
+                <div class="row p-2">
+                    <div class="col-sm-12 col-md-8 col-lg-8 p-3 d-flex justify-content-center">
                         <img src="./img/burgers/Burger_Singular_6BrtDLC.jpeg.720x720_q90.jpg"
                             class=" card card-dish border-3 rounded-0 img-fluid" style="height: 30rem;"
                             alt="Singular burgeer">
