--- a/pages/carta.html
+++ b/pages/carta.html
@@ -14,9 +14,8 @@
     <nav>
         <div id="navbar-a">
             <div class="container 100-vh p-0">
-                <nav class="navbar navbar-expand-lg   d-flex justify-content-around">
+                <nav class="navbar navbar-expand-lg">
                     <div class="container-fluid">
-
                         <button class="navbar-toggler bg-body-tertiary" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -26,11 +25,9 @@
                                 src="../img/otras/the_hundred_logo_new.png" alt=""></a>
                         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                             <div class="navbar-nav ">
-                                <!-- <a class="nav-link active" aria-current="page" href="#">Home</a> -->
-                                <a class="nav-link text-nav border-3" href="#">CARTA</a>
-                                <a class="nav-link text-nav border-3" href="../pages/promociones.html">PROMOCIONES</a>
-                                <a class="nav-link text-nav border-3" href="../pages/contacto.html">CONTACTO</a>
-                                <a class="nav-link text-nav border-3 border-white" href="#"> </a>
+                                <a class="nav-link text-nav px-5" href="#">CARTA</a>
+                                <a class="nav-link text-nav px-5" href="../pages/promociones.html">PROMOCIONES</a>
+                                <a class="nav-link text-nav px-5" href="../pages/contacto.html">CONTACTO</a>
                             </div>
                         </div>
                     </div>
@@ -38,12 +35,9 @@
             </div>
         </div>
     </nav>
-    <!-- <div id="navbar-b">
-            <div class="container p-0">
-                <nav class="navbar navbar-expand-lg bg-body-tertiary"> -->
-    <div class="container sticky-top"">
+
+    <div class="container sticky-top">
         <div class="navbar-nav nav-carta d-flex flex-row flex-wrap justify-content-around bg-body-tertiary">
-            <!-- <a class="nav-link active" aria-current="page" href="#">Home</a> -->
             <a class="nav-link" href="#">🍔Burgers</a>
             <a class="nav-link" href="#side">🍟Sides</a>
             <a class="nav-link" href="#kids">🧸kids</a>
@@ -57,7 +51,7 @@
         </div> -->
 
     <main>
-        <div class="container">
+        <div class="container-fluid">
             <div class="row  p-5">
                 <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center p-3">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
