--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -14,8 +14,8 @@
     <main>
         <nav>
             <div id="navbar-a">
-                <div class="container 100-vh p-3">
-                    <nav class="navbar navbar-expand-lg   d-flex justify-content-around">
+                <div class="container 100-vh p-0">
+                    <nav class="navbar navbar-expand-lg">
                         <div class="container-fluid">
 
                             <button class="navbar-toggler bg-body-tertiary" type="button" data-bs-toggle="collapse"
@@ -28,10 +28,9 @@
                             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                                 <div class="navbar-nav ">
                                     <!-- <a class="nav-link active" aria-current="page" href="#">Home</a> -->
-                                    <a class="nav-link text-nav border-3" href="../pages/carta.html">CARTA</a>
-                                    <a class="nav-link text-nav border-3"
-                                        href="../pages/promociones.html">PROMOCIONES</a>
-                                    <a class="nav-link text-nav border-3" href="#">CONTACTO</a>
+                                    <a class="nav-link text-nav px-5" href="../pages/carta.html">CARTA</a>
+                                    <a class="nav-link text-nav px-5" href="../pages/promociones.html">PROMOCIONES</a>
+                                    <a class="nav-link text-nav px-5" href="#">CONTACTO</a>
                                     <!-- <a class="nav-link text-nav border-3 border-white" href="#"> </a> -->
                                 </div>
                             </div>
@@ -57,7 +56,7 @@
                                 <input type="email" class="form-control">
                             </div>
                             <div class="mb-3">
-                                <label for="exampleFormControlTextarea1" class="form-label">Dinos aquí tu comentario</label>
+                                <label for="exampleFormControlTextarea1" class="form-label">Deja aquí tu comentario</label>
                                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                             </div>
                             <button type="button" class="btn btn-dark border-3 border-white">Enviar</button>
