--- a/pages/promociones.html
+++ b/pages/promociones.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reservas</title>
+    <title>Promociones</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
@@ -12,9 +12,8 @@
     <nav>
         <div id="navbar-a">
             <div class="container 100-vh p-3">
-                <nav class="navbar navbar-expand-lg   d-flex justify-content-around">
+                <nav class="navbar navbar-expand-lg">
                     <div class="container-fluid">
-
                         <button class="navbar-toggler bg-body-tertiary" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -24,11 +23,9 @@
                                 src="../img/otras/the_hundred_logo_new.png" alt=""></a>
                         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                             <div class="navbar-nav ">
-                                <!-- <a class="nav-link active" aria-current="page" href="#">Home</a> -->
-                                <a class="nav-link text-nav border-3" href="../pages/carta.html">CARTA</a>
-                                <a class="nav-link text-nav border-3" href="#">PROMOCIONES</a>
-                                <a class="nav-link text-nav border-3" href="../pages/contacto.html">CONTACTO</a>
-                                <!-- <a class="nav-link text-nav border-3 border-white" href="#"> </a> -->
+                                <a class="nav-link text-nav px-5" href="../pages/carta.html">CARTA</a>
+                                <a class="nav-link text-nav px-5" href="#">PROMOCIONES</a>
+                                <a class="nav-link text-nav px-5" href="../pages/contacto.html">CONTACTO</a>
                             </div>
                         </div>
                     </div>
