ajustado formulario a pantalla responsive

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -15,7 +15,7 @@
         <nav>
             <div id="navbar-a">
                 <div class="container 100-vh p-0">
-                    <nav class="navbar navbar-expand-lg">
+                    <nav class="navbar navbar-expand-lg d-flex justify-content-around">
                         <div class="container-fluid">
 
                             <button class="navbar-toggler bg-body-tertiary" type="button" data-bs-toggle="collapse"
@@ -40,22 +40,22 @@
             </div>
         </nav>
         <main>
-            <div class="container container-contacto">
-                <div class="row  p-5 justify-content-end">
-                    <div class="col-12 col-md-12 col-lg-12 d-flex justify-content-center p-5">
+            <div class="container">
+                <!-- <div class="row"> -->
+                    <div class="col-12 col-md-12 col-lg-12 d-flex justify-content-center p-3">
                         <div class="card border-3 border-white rounded-0" style="width: 40rem;">
                             <img src="../img/burgers/Burger_Singular_6BrtDLC.jpeg.720x720_q90.jpg"
-                                class="card-img-top card-dish rounded-0" style="height: 30rem;" alt="Singular burger">
+                                class="card-dish rounded-0" style="height: 30rem;" alt="Singular burger">
 
-                            <div class="mb-3">
+                            <div class="mb-3 p-2">
                                 <label for="exampleFormControlInput1" class="form-label">Nombre</label>
                                 <input type="name" class="form-control">
                             </div>
-                            <div class="mb-3">
+                            <div class="mb-3 p-2">
                                 <label for="exampleFormControlInput1" class="form-label">Email address</label>
                                 <input type="email" class="form-control">
                             </div>
-                            <div class="mb-3">
+                            <div class="mb-3 p-2">
                                 <label for="exampleFormControlTextarea1" class="form-label">Deja aquí tu comentario</label>
                                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                             </div>
@@ -63,7 +63,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                <!-- </div> -->
             </div>
          </main>
 
