--- a/pages/carta.html
+++ b/pages/carta.html
@@ -51,8 +51,8 @@
         </div> -->
 
     <main>
-        <div class="container-fluid">
-            <div class="row  p-5">
+        <div class="container">
+            <div class="row p-3">
                 <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center p-3">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
                         <img src="../img/burgers/Burger_Singular_6BrtDLC.jpeg.720x720_q90.jpg"
