añadir el padding de la row en carta

--- a/pages/carta.html
+++ b/pages/carta.html
@@ -52,7 +52,7 @@
 
     <main>
         <div class="container">
-            <div class="row p-5">
+            <div class="row p-3">
                 <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center p-3">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
                         <img src="../img/burgers/Burger_Singular_6BrtDLC.jpeg.720x720_q90.jpg"
@@ -169,8 +169,8 @@
         </div>
 
         <div class="container container-sides">
-            <div class="row  p-5">
-                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+            <div class="row p-3">
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center p-3">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
                         <img src="../img/sides/fries.jpg..jpg" class="card-img-top card-dish rounded-0"
                             style="height: 20rem;" alt="Patatas fritas">
@@ -179,7 +179,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center p-3">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
                         <img src="../img/sides/sweet.jpg.png" class="card-img-top card-dish rounded-0"
                             style="height: 20rem;" alt="Sweet potatoes">
@@ -188,7 +188,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center p-3">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
                         <img src="../img/sides/bacon_cheese.jpg.jpg" class="card-img-top card-dish rounded-0"
                             style="height: 20rem;" alt="Bacon cheese fries">
@@ -205,8 +205,8 @@
             </div>
         </div>
         <div class="container container-kids">
-            <div class="row  p-5">
-                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+            <div class="row  p-3">
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center p-3">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
                         <img src="../img/kids/kids_burger.jpg.720x720_q90.jpg" class="card-img-top card-dish rounded-0"
                             style="height: 20rem;" alt="Menu infantil">
@@ -216,7 +216,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center p-3">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
                         <img src="../img/kids/kids_nuggets.jpg.720x720_q90.jpg" class="card-img-top card-dish rounded-0"
                             style="height: 20rem;" alt="Menu infantil nuggets">
@@ -237,7 +237,7 @@
         </div>
         <div class="container container-sweets">
             <div class="row p-3">
-                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center p-3">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
                         <img src="../img/sweets/sammy-loves.jpg.720x720_q90.jpg"
                             class="card-img-top card-dish rounded-0" style="height: 20rem;" alt="Sammy chocolate">
@@ -247,7 +247,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center p-3">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
                         <img src="../img/sweets/cheesecake-lotus.jpg.720x720_q90.jpg"
                             class="card-img-top card-dish rounded-0" style="height: 20rem;" alt="Cheesecake Lotus">
@@ -257,7 +257,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center p-3">
                     <div class="card border-3 border-white rounded-0" style="width: 20rem;">
                         <img src="../img/sweets/tarta_de_queso_O3OVEWd.png.720x720_q90.png"
                             class="card-img-top card-dish rounded-0" style="height: 20rem;" alt="Satisfaction burger">
